Add Reset button & directly calling parent methods

--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -8,19 +8,26 @@
     borderRadius:"30px"
 }; */
 
-.counterButton {
+button {
     font-size:16px;
-    background-color: #00a5ab;
     width:100px;
     margin:10px;
     color:white;
     padding:15px;
-    border-radius:30px;
     border-color: black;
     border-width: 5px;
+}
+
+.counterButton {
+    background-color: #00a5ab;
+    border-radius:30px;
 }
 
 .totalCount {
     font-size: 120px;
     color:  #00a5ab;
+}
+
+.resetButton {
+    background-color: #ba116e;
 }
